// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThemeProvider can handle a partial theme 1`] = `
<div
  style={
    Object {
      "--accent-background": "#0078d4",
      "--accent-borderColor": "transparent",
      "--accent-checked-background": "#005a9e",
      "--accent-checked-contentColor": "#ffffff",
      "--accent-checkedHovered-background": "#005a9e",
      "--accent-checkedHovered-contentColor": "#ffffff",
      "--accent-contentColor": "#ffffff",
      "--accent-disabled-background": "#f3f2f1",
      "--accent-disabled-borderColor": "var(--accent-disabled-background)",
      "--accent-disabled-contentColor": "#a19f9d",
      "--accent-disabled-dividerColor": "#c8c6c4",
      "--accent-disabled-iconColor": "var(--accent-disabled-contentColor)",
      "--accent-dividerColor": "#ffffff",
      "--accent-focused-background": "var(--accent-background)",
      "--accent-focused-borderColor": "var(--accent-borderColor)",
      "--accent-focused-contentColor": "var(--accent-contentColor)",
      "--accent-focused-iconColor": "var(--accent-iconColor)",
      "--accent-hovered-background": "#106ebe",
      "--accent-hovered-borderColor": "var(--accent-borderColor)",
      "--accent-hovered-contentColor": "#ffffff",
      "--accent-hovered-iconColor": "#ffffff",
      "--accent-iconColor": "#ffffff",
      "--accent-pressed-background": "#005a9e",
      "--accent-pressed-borderColor": "var(--accent-borderColor)",
      "--accent-pressed-contentColor": "#ffffff",
      "--accent-pressed-iconColor": "var(--accent-iconColor)",
      "--body-background": "#ffffff",
      "--button-background": "#ffffff",
      "--button-borderColor": "#8a8886",
      "--button-borderRadius": "2px",
      "--button-borderWidth": "1px",
      "--button-checked-background": "#edebe9",
      "--button-checked-contentColor": "#201f1e",
      "--button-checkedHovered-background": "#edebe9",
      "--button-checkedHovered-contentColor": "#000000",
      "--button-contentColor": "#323130",
      "--button-contentGap": "10px",
      "--button-disabled-background": "#f3f2f1",
      "--button-disabled-borderColor": "#f3f2f1",
      "--button-disabled-contentColor": "#a19f9d",
      "--button-disabled-dividerColor": "#c8c6c4",
      "--button-disabled-iconColor": "var(--button-disabled-contentColor)",
      "--button-dividerColor": "#c8c6c4",
      "--button-dividerLength": "var(--button-minHeight)",
      "--button-dividerThickness": "var(--button-borderWidth)",
      "--button-focusColor": "#605e5c",
      "--button-focusInnerColor": "#ffffff",
      "--button-focused-background": "var(--button-background)",
      "--button-focused-borderColor": "var(--button-borderColor)",
      "--button-focused-contentColor": "var(--button-contentColor)",
      "--button-focused-iconColor": "var(--button-iconColor)",
      "--button-fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "--button-fontSize": "14px",
      "--button-fontWeight": 600,
      "--button-hovered-background": "#f3f2f1",
      "--button-hovered-borderColor": "#8a8886",
      "--button-hovered-contentColor": "#201f1e",
      "--button-hovered-iconColor": "var(--button-iconColor)",
      "--button-iconColor": "inherit",
      "--button-iconSize": "16px",
      "--button-minHeight": "var(--button-size-regular)",
      "--button-padding": "0 16px",
      "--button-pressed-background": "#edebe9",
      "--button-pressed-borderColor": "#8a8886",
      "--button-pressed-contentColor": "#201f1e",
      "--button-pressed-iconColor": "var(--button-iconColor)",
      "--button-size-large": "40px",
      "--button-size-larger": "48px",
      "--button-size-largest": "64px",
      "--button-size-regular": "32px",
      "--button-size-small": "24px",
      "--button-size-smaller": "24px",
      "--button-size-smallest": "24px",
      "--effects-elevation16": "0 6.4px 14.4px 0 rgba(0, 0, 0, 0.132), 0 1.2px 3.6px 0 rgba(0, 0, 0, 0.108)",
      "--effects-elevation4": "0 1.6px 3.6px 0 rgba(0, 0, 0, 0.132), 0 0.3px 0.9px 0 rgba(0, 0, 0, 0.108)",
      "--effects-elevation64": "0 25.6px 57.6px 0 rgba(0, 0, 0, 0.22), 0 4.8px 14.4px 0 rgba(0, 0, 0, 0.18)",
      "--effects-elevation8": "0 3.2px 7.2px 0 rgba(0, 0, 0, 0.132), 0 0.6px 1.8px 0 rgba(0, 0, 0, 0.108)",
      "--effects-roundedCorner2": "2px",
      "--effects-roundedCorner4": "4px",
      "--effects-roundedCorner6": "6px",
      "--fonts-large-MozOsxFontSmoothing": "grayscale",
      "--fonts-large-WebkitFontSmoothing": "antialiased",
      "--fonts-large-fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "--fonts-large-fontSize": "18px",
      "--fonts-large-fontWeight": 400,
      "--fonts-medium-MozOsxFontSmoothing": "grayscale",
      "--fonts-medium-WebkitFontSmoothing": "antialiased",
      "--fonts-medium-fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "--fonts-medium-fontSize": "14px",
      "--fonts-medium-fontWeight": 400,
      "--fonts-mediumPlus-MozOsxFontSmoothing": "grayscale",
      "--fonts-mediumPlus-WebkitFontSmoothing": "antialiased",
      "--fonts-mediumPlus-fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "--fonts-mediumPlus-fontSize": "16px",
      "--fonts-mediumPlus-fontWeight": 400,
      "--fonts-mega-MozOsxFontSmoothing": "grayscale",
      "--fonts-mega-WebkitFontSmoothing": "antialiased",
      "--fonts-mega-fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "--fonts-mega-fontSize": "68px",
      "--fonts-mega-fontWeight": 600,
      "--fonts-small-MozOsxFontSmoothing": "grayscale",
      "--fonts-small-WebkitFontSmoothing": "antialiased",
      "--fonts-small-fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "--fonts-small-fontSize": "12px",
      "--fonts-small-fontWeight": 400,
      "--fonts-smallPlus-MozOsxFontSmoothing": "grayscale",
      "--fonts-smallPlus-WebkitFontSmoothing": "antialiased",
      "--fonts-smallPlus-fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "--fonts-smallPlus-fontSize": "12px",
      "--fonts-smallPlus-fontWeight": 400,
      "--fonts-superLarge-MozOsxFontSmoothing": "grayscale",
      "--fonts-superLarge-WebkitFontSmoothing": "antialiased",
      "--fonts-superLarge-fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "--fonts-superLarge-fontSize": "42px",
      "--fonts-superLarge-fontWeight": 600,
      "--fonts-tiny-MozOsxFontSmoothing": "grayscale",
      "--fonts-tiny-WebkitFontSmoothing": "antialiased",
      "--fonts-tiny-fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "--fonts-tiny-fontSize": "10px",
      "--fonts-tiny-fontWeight": 400,
      "--fonts-xLarge-MozOsxFontSmoothing": "grayscale",
      "--fonts-xLarge-WebkitFontSmoothing": "antialiased",
      "--fonts-xLarge-fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "--fonts-xLarge-fontSize": "20px",
      "--fonts-xLarge-fontWeight": 600,
      "--fonts-xLargePlus-MozOsxFontSmoothing": "grayscale",
      "--fonts-xLargePlus-WebkitFontSmoothing": "antialiased",
      "--fonts-xLargePlus-fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "--fonts-xLargePlus-fontSize": "24px",
      "--fonts-xLargePlus-fontWeight": 600,
      "--fonts-xSmall-MozOsxFontSmoothing": "grayscale",
      "--fonts-xSmall-WebkitFontSmoothing": "antialiased",
      "--fonts-xSmall-fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "--fonts-xSmall-fontSize": "10px",
      "--fonts-xSmall-fontWeight": 400,
      "--fonts-xxLarge-MozOsxFontSmoothing": "grayscale",
      "--fonts-xxLarge-WebkitFontSmoothing": "antialiased",
      "--fonts-xxLarge-fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "--fonts-xxLarge-fontSize": "28px",
      "--fonts-xxLarge-fontWeight": 600,
      "--fonts-xxLargePlus-MozOsxFontSmoothing": "grayscale",
      "--fonts-xxLargePlus-WebkitFontSmoothing": "antialiased",
      "--fonts-xxLargePlus-fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "--fonts-xxLargePlus-fontSize": "32px",
      "--fonts-xxLargePlus-fontWeight": 600,
      "--foo-background": "red",
      "--palette-accent": "#0078d4",
      "--palette-black": "#000000",
      "--palette-blackTranslucent40": "rgba(0,0,0,.4)",
      "--palette-blue": "#0078d4",
      "--palette-blueDark": "#002050",
      "--palette-blueLight": "#00bcf2",
      "--palette-blueMid": "#00188f",
      "--palette-green": "#107c10",
      "--palette-greenDark": "#004b1c",
      "--palette-greenLight": "#bad80a",
      "--palette-magenta": "#b4009e",
      "--palette-magentaDark": "#5c005c",
      "--palette-magentaLight": "#e3008c",
      "--palette-neutralDark": "#201f1e",
      "--palette-neutralLight": "#edebe9",
      "--palette-neutralLighter": "#f3f2f1",
      "--palette-neutralLighterAlt": "#faf9f8",
      "--palette-neutralPrimary": "#323130",
      "--palette-neutralPrimaryAlt": "#3b3a39",
      "--palette-neutralQuaternary": "#d2d0ce",
      "--palette-neutralQuaternaryAlt": "#e1dfdd",
      "--palette-neutralSecondary": "#605e5c",
      "--palette-neutralSecondaryAlt": "#8a8886",
      "--palette-neutralTertiary": "#a19f9d",
      "--palette-neutralTertiaryAlt": "#c8c6c4",
      "--palette-orange": "#d83b01",
      "--palette-orangeLight": "#ea4300",
      "--palette-orangeLighter": "#ff8c00",
      "--palette-purple": "#5c2d91",
      "--palette-purpleDark": "#32145a",
      "--palette-purpleLight": "#b4a0ff",
      "--palette-red": "#e81123",
      "--palette-redDark": "#a4262c",
      "--palette-teal": "#008272",
      "--palette-tealDark": "#004b50",
      "--palette-tealLight": "#00b294",
      "--palette-themeDark": "#005a9e",
      "--palette-themeDarkAlt": "#106ebe",
      "--palette-themeDarker": "#004578",
      "--palette-themeLight": "#c7e0f4",
      "--palette-themeLighter": "#deecf9",
      "--palette-themeLighterAlt": "#eff6fc",
      "--palette-themePrimary": "#0078d4",
      "--palette-themeSecondary": "#2b88d8",
      "--palette-themeTertiary": "#71afe5",
      "--palette-white": "#ffffff",
      "--palette-whiteTranslucent40": "rgba(255,255,255,.4)",
      "--palette-yellow": "#ffb900",
      "--palette-yellowDark": "#d29200",
      "--palette-yellowLight": "#fff100",
      "--semanticColors-accentButtonBackground": "#0078d4",
      "--semanticColors-accentButtonText": "#ffffff",
      "--semanticColors-actionLink": "#323130",
      "--semanticColors-actionLinkHovered": "#201f1e",
      "--semanticColors-blockingBackground": "#FDE7E9",
      "--semanticColors-blockingIcon": "#FDE7E9",
      "--semanticColors-bodyBackground": "#ffffff",
      "--semanticColors-bodyBackgroundChecked": "#edebe9",
      "--semanticColors-bodyBackgroundHovered": "#f3f2f1",
      "--semanticColors-bodyDivider": "#edebe9",
      "--semanticColors-bodyFrameBackground": "#ffffff",
      "--semanticColors-bodyFrameDivider": "#edebe9",
      "--semanticColors-bodyStandoutBackground": "#faf9f8",
      "--semanticColors-bodySubtext": "#605e5c",
      "--semanticColors-bodyText": "#323130",
      "--semanticColors-bodyTextChecked": "#000000",
      "--semanticColors-buttonBackground": "#ffffff",
      "--semanticColors-buttonBackgroundChecked": "#c8c6c4",
      "--semanticColors-buttonBackgroundCheckedHovered": "#edebe9",
      "--semanticColors-buttonBackgroundDisabled": "#f3f2f1",
      "--semanticColors-buttonBackgroundHovered": "#f3f2f1",
      "--semanticColors-buttonBackgroundPressed": "#edebe9",
      "--semanticColors-buttonBorder": "#8a8886",
      "--semanticColors-buttonBorderDisabled": "#f3f2f1",
      "--semanticColors-buttonText": "#323130",
      "--semanticColors-buttonTextChecked": "#201f1e",
      "--semanticColors-buttonTextCheckedHovered": "#000000",
      "--semanticColors-buttonTextDisabled": "#a19f9d",
      "--semanticColors-buttonTextHovered": "#201f1e",
      "--semanticColors-buttonTextPressed": "#201f1e",
      "--semanticColors-cardShadow": "0 1.6px 3.6px 0 rgba(0, 0, 0, 0.132), 0 0.3px 0.9px 0 rgba(0, 0, 0, 0.108)",
      "--semanticColors-cardShadowHovered": "0 3.2px 7.2px 0 rgba(0, 0, 0, 0.132), 0 0.6px 1.8px 0 rgba(0, 0, 0, 0.108)",
      "--semanticColors-cardStandoutBackground": "#ffffff",
      "--semanticColors-defaultStateBackground": "#faf9f8",
      "--semanticColors-disabledBackground": "#f3f2f1",
      "--semanticColors-disabledBodySubtext": "#c8c6c4",
      "--semanticColors-disabledBodyText": "#a19f9d",
      "--semanticColors-disabledBorder": "#c8c6c4",
      "--semanticColors-disabledSubtext": "#d2d0ce",
      "--semanticColors-disabledText": "#a19f9d",
      "--semanticColors-errorBackground": "#FDE7E9",
      "--semanticColors-errorIcon": "#A80000",
      "--semanticColors-errorText": "#a4262c",
      "--semanticColors-focusBorder": "#605e5c",
      "--semanticColors-infoBackground": "#f3f2f1",
      "--semanticColors-infoIcon": "#605e5c",
      "--semanticColors-inputBackground": "#ffffff",
      "--semanticColors-inputBackgroundChecked": "#0078d4",
      "--semanticColors-inputBackgroundCheckedHovered": "#005a9e",
      "--semanticColors-inputBorder": "#605e5c",
      "--semanticColors-inputBorderHovered": "#323130",
      "--semanticColors-inputFocusBorderAlt": "#0078d4",
      "--semanticColors-inputForegroundChecked": "#ffffff",
      "--semanticColors-inputIcon": "#0078d4",
      "--semanticColors-inputIconDisabled": "#a19f9d",
      "--semanticColors-inputIconHovered": "#005a9e",
      "--semanticColors-inputPlaceholderBackgroundChecked": "#deecf9",
      "--semanticColors-inputPlaceholderText": "#605e5c",
      "--semanticColors-inputText": "#323130",
      "--semanticColors-inputTextHovered": "#201f1e",
      "--semanticColors-link": "#0078d4",
      "--semanticColors-linkHovered": "#004578",
      "--semanticColors-listBackground": "#ffffff",
      "--semanticColors-listHeaderBackgroundHovered": "#f3f2f1",
      "--semanticColors-listHeaderBackgroundPressed": "#edebe9",
      "--semanticColors-listItemBackgroundChecked": "#edebe9",
      "--semanticColors-listItemBackgroundCheckedHovered": "#e1dfdd",
      "--semanticColors-listItemBackgroundHovered": "#f3f2f1",
      "--semanticColors-listText": "#323130",
      "--semanticColors-listTextColor": "#323130",
      "--semanticColors-menuBackground": "#ffffff",
      "--semanticColors-menuDivider": "#c8c6c4",
      "--semanticColors-menuHeader": "#0078d4",
      "--semanticColors-menuIcon": "#0078d4",
      "--semanticColors-menuItemBackgroundChecked": "#edebe9",
      "--semanticColors-menuItemBackgroundHovered": "#f3f2f1",
      "--semanticColors-menuItemBackgroundPressed": "#edebe9",
      "--semanticColors-menuItemText": "#323130",
      "--semanticColors-menuItemTextHovered": "#201f1e",
      "--semanticColors-messageLink": "#005A9E",
      "--semanticColors-messageLinkHovered": "#004578",
      "--semanticColors-messageText": "#323130",
      "--semanticColors-primaryButtonBackground": "#0078d4",
      "--semanticColors-primaryButtonBackgroundDisabled": "#f3f2f1",
      "--semanticColors-primaryButtonBackgroundHovered": "#106ebe",
      "--semanticColors-primaryButtonBackgroundPressed": "#005a9e",
      "--semanticColors-primaryButtonBorder": "transparent",
      "--semanticColors-primaryButtonText": "#ffffff",
      "--semanticColors-primaryButtonTextDisabled": "#d2d0ce",
      "--semanticColors-primaryButtonTextHovered": "#ffffff",
      "--semanticColors-primaryButtonTextPressed": "#ffffff",
      "--semanticColors-severeWarningBackground": "#FED9CC",
      "--semanticColors-severeWarningIcon": "#D83B01",
      "--semanticColors-smallInputBorder": "#605e5c",
      "--semanticColors-successBackground": "#DFF6DD",
      "--semanticColors-successIcon": "#107C10",
      "--semanticColors-successText": "#107C10",
      "--semanticColors-variantBorder": "#edebe9",
      "--semanticColors-variantBorderHovered": "#a19f9d",
      "--semanticColors-warningBackground": "#FFF4CE",
      "--semanticColors-warningHighlight": "#ffb900",
      "--semanticColors-warningIcon": "#797775",
      "--semanticColors-warningText": "#323130",
      "--spacing-l1": "20px",
      "--spacing-l2": "32px",
      "--spacing-m": "16px",
      "--spacing-s1": "8px",
      "--spacing-s2": "4px",
    }
  }
>
  Hello
</div>
`;

exports[`ThemeProvider renders a div 1`] = `
<div
  style={
    Object {
      "--accent-background": "#0078d4",
      "--accent-borderColor": "transparent",
      "--accent-checked-background": "#005a9e",
      "--accent-checked-contentColor": "#ffffff",
      "--accent-checkedHovered-background": "#005a9e",
      "--accent-checkedHovered-contentColor": "#ffffff",
      "--accent-contentColor": "#ffffff",
      "--accent-disabled-background": "#f3f2f1",
      "--accent-disabled-borderColor": "var(--accent-disabled-background)",
      "--accent-disabled-contentColor": "#a19f9d",
      "--accent-disabled-dividerColor": "#c8c6c4",
      "--accent-disabled-iconColor": "var(--accent-disabled-contentColor)",
      "--accent-dividerColor": "#ffffff",
      "--accent-focused-background": "var(--accent-background)",
      "--accent-focused-borderColor": "var(--accent-borderColor)",
      "--accent-focused-contentColor": "var(--accent-contentColor)",
      "--accent-focused-iconColor": "var(--accent-iconColor)",
      "--accent-hovered-background": "#106ebe",
      "--accent-hovered-borderColor": "var(--accent-borderColor)",
      "--accent-hovered-contentColor": "#ffffff",
      "--accent-hovered-iconColor": "#ffffff",
      "--accent-iconColor": "#ffffff",
      "--accent-pressed-background": "#005a9e",
      "--accent-pressed-borderColor": "var(--accent-borderColor)",
      "--accent-pressed-contentColor": "#ffffff",
      "--accent-pressed-iconColor": "var(--accent-iconColor)",
      "--body-background": "#ffffff",
      "--button-background": "#ffffff",
      "--button-borderColor": "#8a8886",
      "--button-borderRadius": "2px",
      "--button-borderWidth": "1px",
      "--button-checked-background": "#edebe9",
      "--button-checked-contentColor": "#201f1e",
      "--button-checkedHovered-background": "#edebe9",
      "--button-checkedHovered-contentColor": "#000000",
      "--button-contentColor": "#323130",
      "--button-contentGap": "10px",
      "--button-disabled-background": "#f3f2f1",
      "--button-disabled-borderColor": "#f3f2f1",
      "--button-disabled-contentColor": "#a19f9d",
      "--button-disabled-dividerColor": "#c8c6c4",
      "--button-disabled-iconColor": "var(--button-disabled-contentColor)",
      "--button-dividerColor": "#c8c6c4",
      "--button-dividerLength": "var(--button-minHeight)",
      "--button-dividerThickness": "var(--button-borderWidth)",
      "--button-focusColor": "#605e5c",
      "--button-focusInnerColor": "#ffffff",
      "--button-focused-background": "var(--button-background)",
      "--button-focused-borderColor": "var(--button-borderColor)",
      "--button-focused-contentColor": "var(--button-contentColor)",
      "--button-focused-iconColor": "var(--button-iconColor)",
      "--button-fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "--button-fontSize": "14px",
      "--button-fontWeight": 600,
      "--button-hovered-background": "#f3f2f1",
      "--button-hovered-borderColor": "#8a8886",
      "--button-hovered-contentColor": "#201f1e",
      "--button-hovered-iconColor": "var(--button-iconColor)",
      "--button-iconColor": "inherit",
      "--button-iconSize": "16px",
      "--button-minHeight": "var(--button-size-regular)",
      "--button-padding": "0 16px",
      "--button-pressed-background": "#edebe9",
      "--button-pressed-borderColor": "#8a8886",
      "--button-pressed-contentColor": "#201f1e",
      "--button-pressed-iconColor": "var(--button-iconColor)",
      "--button-size-large": "40px",
      "--button-size-larger": "48px",
      "--button-size-largest": "64px",
      "--button-size-regular": "32px",
      "--button-size-small": "24px",
      "--button-size-smaller": "24px",
      "--button-size-smallest": "24px",
      "--effects-elevation16": "0 6.4px 14.4px 0 rgba(0, 0, 0, 0.132), 0 1.2px 3.6px 0 rgba(0, 0, 0, 0.108)",
      "--effects-elevation4": "0 1.6px 3.6px 0 rgba(0, 0, 0, 0.132), 0 0.3px 0.9px 0 rgba(0, 0, 0, 0.108)",
      "--effects-elevation64": "0 25.6px 57.6px 0 rgba(0, 0, 0, 0.22), 0 4.8px 14.4px 0 rgba(0, 0, 0, 0.18)",
      "--effects-elevation8": "0 3.2px 7.2px 0 rgba(0, 0, 0, 0.132), 0 0.6px 1.8px 0 rgba(0, 0, 0, 0.108)",
      "--effects-roundedCorner2": "2px",
      "--effects-roundedCorner4": "4px",
      "--effects-roundedCorner6": "6px",
      "--fonts-large-MozOsxFontSmoothing": "grayscale",
      "--fonts-large-WebkitFontSmoothing": "antialiased",
      "--fonts-large-fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "--fonts-large-fontSize": "18px",
      "--fonts-large-fontWeight": 400,
      "--fonts-medium-MozOsxFontSmoothing": "grayscale",
      "--fonts-medium-WebkitFontSmoothing": "antialiased",
      "--fonts-medium-fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "--fonts-medium-fontSize": "14px",
      "--fonts-medium-fontWeight": 400,
      "--fonts-mediumPlus-MozOsxFontSmoothing": "grayscale",
      "--fonts-mediumPlus-WebkitFontSmoothing": "antialiased",
      "--fonts-mediumPlus-fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "--fonts-mediumPlus-fontSize": "16px",
      "--fonts-mediumPlus-fontWeight": 400,
      "--fonts-mega-MozOsxFontSmoothing": "grayscale",
      "--fonts-mega-WebkitFontSmoothing": "antialiased",
      "--fonts-mega-fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "--fonts-mega-fontSize": "68px",
      "--fonts-mega-fontWeight": 600,
      "--fonts-small-MozOsxFontSmoothing": "grayscale",
      "--fonts-small-WebkitFontSmoothing": "antialiased",
      "--fonts-small-fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "--fonts-small-fontSize": "12px",
      "--fonts-small-fontWeight": 400,
      "--fonts-smallPlus-MozOsxFontSmoothing": "grayscale",
      "--fonts-smallPlus-WebkitFontSmoothing": "antialiased",
      "--fonts-smallPlus-fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "--fonts-smallPlus-fontSize": "12px",
      "--fonts-smallPlus-fontWeight": 400,
      "--fonts-superLarge-MozOsxFontSmoothing": "grayscale",
      "--fonts-superLarge-WebkitFontSmoothing": "antialiased",
      "--fonts-superLarge-fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "--fonts-superLarge-fontSize": "42px",
      "--fonts-superLarge-fontWeight": 600,
      "--fonts-tiny-MozOsxFontSmoothing": "grayscale",
      "--fonts-tiny-WebkitFontSmoothing": "antialiased",
      "--fonts-tiny-fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "--fonts-tiny-fontSize": "10px",
      "--fonts-tiny-fontWeight": 400,
      "--fonts-xLarge-MozOsxFontSmoothing": "grayscale",
      "--fonts-xLarge-WebkitFontSmoothing": "antialiased",
      "--fonts-xLarge-fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "--fonts-xLarge-fontSize": "20px",
      "--fonts-xLarge-fontWeight": 600,
      "--fonts-xLargePlus-MozOsxFontSmoothing": "grayscale",
      "--fonts-xLargePlus-WebkitFontSmoothing": "antialiased",
      "--fonts-xLargePlus-fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "--fonts-xLargePlus-fontSize": "24px",
      "--fonts-xLargePlus-fontWeight": 600,
      "--fonts-xSmall-MozOsxFontSmoothing": "grayscale",
      "--fonts-xSmall-WebkitFontSmoothing": "antialiased",
      "--fonts-xSmall-fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "--fonts-xSmall-fontSize": "10px",
      "--fonts-xSmall-fontWeight": 400,
      "--fonts-xxLarge-MozOsxFontSmoothing": "grayscale",
      "--fonts-xxLarge-WebkitFontSmoothing": "antialiased",
      "--fonts-xxLarge-fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "--fonts-xxLarge-fontSize": "28px",
      "--fonts-xxLarge-fontWeight": 600,
      "--fonts-xxLargePlus-MozOsxFontSmoothing": "grayscale",
      "--fonts-xxLargePlus-WebkitFontSmoothing": "antialiased",
      "--fonts-xxLargePlus-fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "--fonts-xxLargePlus-fontSize": "32px",
      "--fonts-xxLargePlus-fontWeight": 600,
      "--palette-accent": "#0078d4",
      "--palette-black": "#000000",
      "--palette-blackTranslucent40": "rgba(0,0,0,.4)",
      "--palette-blue": "#0078d4",
      "--palette-blueDark": "#002050",
      "--palette-blueLight": "#00bcf2",
      "--palette-blueMid": "#00188f",
      "--palette-green": "#107c10",
      "--palette-greenDark": "#004b1c",
      "--palette-greenLight": "#bad80a",
      "--palette-magenta": "#b4009e",
      "--palette-magentaDark": "#5c005c",
      "--palette-magentaLight": "#e3008c",
      "--palette-neutralDark": "#201f1e",
      "--palette-neutralLight": "#edebe9",
      "--palette-neutralLighter": "#f3f2f1",
      "--palette-neutralLighterAlt": "#faf9f8",
      "--palette-neutralPrimary": "#323130",
      "--palette-neutralPrimaryAlt": "#3b3a39",
      "--palette-neutralQuaternary": "#d2d0ce",
      "--palette-neutralQuaternaryAlt": "#e1dfdd",
      "--palette-neutralSecondary": "#605e5c",
      "--palette-neutralSecondaryAlt": "#8a8886",
      "--palette-neutralTertiary": "#a19f9d",
      "--palette-neutralTertiaryAlt": "#c8c6c4",
      "--palette-orange": "#d83b01",
      "--palette-orangeLight": "#ea4300",
      "--palette-orangeLighter": "#ff8c00",
      "--palette-purple": "#5c2d91",
      "--palette-purpleDark": "#32145a",
      "--palette-purpleLight": "#b4a0ff",
      "--palette-red": "#e81123",
      "--palette-redDark": "#a4262c",
      "--palette-teal": "#008272",
      "--palette-tealDark": "#004b50",
      "--palette-tealLight": "#00b294",
      "--palette-themeDark": "#005a9e",
      "--palette-themeDarkAlt": "#106ebe",
      "--palette-themeDarker": "#004578",
      "--palette-themeLight": "#c7e0f4",
      "--palette-themeLighter": "#deecf9",
      "--palette-themeLighterAlt": "#eff6fc",
      "--palette-themePrimary": "#0078d4",
      "--palette-themeSecondary": "#2b88d8",
      "--palette-themeTertiary": "#71afe5",
      "--palette-white": "#ffffff",
      "--palette-whiteTranslucent40": "rgba(255,255,255,.4)",
      "--palette-yellow": "#ffb900",
      "--palette-yellowDark": "#d29200",
      "--palette-yellowLight": "#fff100",
      "--semanticColors-accentButtonBackground": "#0078d4",
      "--semanticColors-accentButtonText": "#ffffff",
      "--semanticColors-actionLink": "#323130",
      "--semanticColors-actionLinkHovered": "#201f1e",
      "--semanticColors-blockingBackground": "#FDE7E9",
      "--semanticColors-blockingIcon": "#FDE7E9",
      "--semanticColors-bodyBackground": "#ffffff",
      "--semanticColors-bodyBackgroundChecked": "#edebe9",
      "--semanticColors-bodyBackgroundHovered": "#f3f2f1",
      "--semanticColors-bodyDivider": "#edebe9",
      "--semanticColors-bodyFrameBackground": "#ffffff",
      "--semanticColors-bodyFrameDivider": "#edebe9",
      "--semanticColors-bodyStandoutBackground": "#faf9f8",
      "--semanticColors-bodySubtext": "#605e5c",
      "--semanticColors-bodyText": "#323130",
      "--semanticColors-bodyTextChecked": "#000000",
      "--semanticColors-buttonBackground": "#ffffff",
      "--semanticColors-buttonBackgroundChecked": "#c8c6c4",
      "--semanticColors-buttonBackgroundCheckedHovered": "#edebe9",
      "--semanticColors-buttonBackgroundDisabled": "#f3f2f1",
      "--semanticColors-buttonBackgroundHovered": "#f3f2f1",
      "--semanticColors-buttonBackgroundPressed": "#edebe9",
      "--semanticColors-buttonBorder": "#8a8886",
      "--semanticColors-buttonBorderDisabled": "#f3f2f1",
      "--semanticColors-buttonText": "#323130",
      "--semanticColors-buttonTextChecked": "#201f1e",
      "--semanticColors-buttonTextCheckedHovered": "#000000",
      "--semanticColors-buttonTextDisabled": "#a19f9d",
      "--semanticColors-buttonTextHovered": "#201f1e",
      "--semanticColors-buttonTextPressed": "#201f1e",
      "--semanticColors-cardShadow": "0 1.6px 3.6px 0 rgba(0, 0, 0, 0.132), 0 0.3px 0.9px 0 rgba(0, 0, 0, 0.108)",
      "--semanticColors-cardShadowHovered": "0 3.2px 7.2px 0 rgba(0, 0, 0, 0.132), 0 0.6px 1.8px 0 rgba(0, 0, 0, 0.108)",
      "--semanticColors-cardStandoutBackground": "#ffffff",
      "--semanticColors-defaultStateBackground": "#faf9f8",
      "--semanticColors-disabledBackground": "#f3f2f1",
      "--semanticColors-disabledBodySubtext": "#c8c6c4",
      "--semanticColors-disabledBodyText": "#a19f9d",
      "--semanticColors-disabledBorder": "#c8c6c4",
      "--semanticColors-disabledSubtext": "#d2d0ce",
      "--semanticColors-disabledText": "#a19f9d",
      "--semanticColors-errorBackground": "#FDE7E9",
      "--semanticColors-errorIcon": "#A80000",
      "--semanticColors-errorText": "#a4262c",
      "--semanticColors-focusBorder": "#605e5c",
      "--semanticColors-infoBackground": "#f3f2f1",
      "--semanticColors-infoIcon": "#605e5c",
      "--semanticColors-inputBackground": "#ffffff",
      "--semanticColors-inputBackgroundChecked": "#0078d4",
      "--semanticColors-inputBackgroundCheckedHovered": "#005a9e",
      "--semanticColors-inputBorder": "#605e5c",
      "--semanticColors-inputBorderHovered": "#323130",
      "--semanticColors-inputFocusBorderAlt": "#0078d4",
      "--semanticColors-inputForegroundChecked": "#ffffff",
      "--semanticColors-inputIcon": "#0078d4",
      "--semanticColors-inputIconDisabled": "#a19f9d",
      "--semanticColors-inputIconHovered": "#005a9e",
      "--semanticColors-inputPlaceholderBackgroundChecked": "#deecf9",
      "--semanticColors-inputPlaceholderText": "#605e5c",
      "--semanticColors-inputText": "#323130",
      "--semanticColors-inputTextHovered": "#201f1e",
      "--semanticColors-link": "#0078d4",
      "--semanticColors-linkHovered": "#004578",
      "--semanticColors-listBackground": "#ffffff",
      "--semanticColors-listHeaderBackgroundHovered": "#f3f2f1",
      "--semanticColors-listHeaderBackgroundPressed": "#edebe9",
      "--semanticColors-listItemBackgroundChecked": "#edebe9",
      "--semanticColors-listItemBackgroundCheckedHovered": "#e1dfdd",
      "--semanticColors-listItemBackgroundHovered": "#f3f2f1",
      "--semanticColors-listText": "#323130",
      "--semanticColors-listTextColor": "#323130",
      "--semanticColors-menuBackground": "#ffffff",
      "--semanticColors-menuDivider": "#c8c6c4",
      "--semanticColors-menuHeader": "#0078d4",
      "--semanticColors-menuIcon": "#0078d4",
      "--semanticColors-menuItemBackgroundChecked": "#edebe9",
      "--semanticColors-menuItemBackgroundHovered": "#f3f2f1",
      "--semanticColors-menuItemBackgroundPressed": "#edebe9",
      "--semanticColors-menuItemText": "#323130",
      "--semanticColors-menuItemTextHovered": "#201f1e",
      "--semanticColors-messageLink": "#005A9E",
      "--semanticColors-messageLinkHovered": "#004578",
      "--semanticColors-messageText": "#323130",
      "--semanticColors-primaryButtonBackground": "#0078d4",
      "--semanticColors-primaryButtonBackgroundDisabled": "#f3f2f1",
      "--semanticColors-primaryButtonBackgroundHovered": "#106ebe",
      "--semanticColors-primaryButtonBackgroundPressed": "#005a9e",
      "--semanticColors-primaryButtonBorder": "transparent",
      "--semanticColors-primaryButtonText": "#ffffff",
      "--semanticColors-primaryButtonTextDisabled": "#d2d0ce",
      "--semanticColors-primaryButtonTextHovered": "#ffffff",
      "--semanticColors-primaryButtonTextPressed": "#ffffff",
      "--semanticColors-severeWarningBackground": "#FED9CC",
      "--semanticColors-severeWarningIcon": "#D83B01",
      "--semanticColors-smallInputBorder": "#605e5c",
      "--semanticColors-successBackground": "#DFF6DD",
      "--semanticColors-successIcon": "#107C10",
      "--semanticColors-successText": "#107C10",
      "--semanticColors-variantBorder": "#edebe9",
      "--semanticColors-variantBorderHovered": "#a19f9d",
      "--semanticColors-warningBackground": "#FFF4CE",
      "--semanticColors-warningHighlight": "#ffb900",
      "--semanticColors-warningIcon": "#797775",
      "--semanticColors-warningText": "#323130",
      "--spacing-l1": "20px",
      "--spacing-l2": "32px",
      "--spacing-m": "16px",
      "--spacing-s1": "8px",
      "--spacing-s2": "4px",
    }
  }
>
  Hello
</div>
`;

exports[`ThemeProvider renders a div with styling 1`] = `
<div
  style={
    Object {
      "--accent-background": "#0078d4",
      "--accent-borderColor": "transparent",
      "--accent-checked-background": "#005a9e",
      "--accent-checked-contentColor": "#ffffff",
      "--accent-checkedHovered-background": "#005a9e",
      "--accent-checkedHovered-contentColor": "#ffffff",
      "--accent-contentColor": "#ffffff",
      "--accent-disabled-background": "#f3f2f1",
      "--accent-disabled-borderColor": "var(--accent-disabled-background)",
      "--accent-disabled-contentColor": "#a19f9d",
      "--accent-disabled-dividerColor": "#c8c6c4",
      "--accent-disabled-iconColor": "var(--accent-disabled-contentColor)",
      "--accent-dividerColor": "#ffffff",
      "--accent-focused-background": "var(--accent-background)",
      "--accent-focused-borderColor": "var(--accent-borderColor)",
      "--accent-focused-contentColor": "var(--accent-contentColor)",
      "--accent-focused-iconColor": "var(--accent-iconColor)",
      "--accent-hovered-background": "#106ebe",
      "--accent-hovered-borderColor": "var(--accent-borderColor)",
      "--accent-hovered-contentColor": "#ffffff",
      "--accent-hovered-iconColor": "#ffffff",
      "--accent-iconColor": "#ffffff",
      "--accent-pressed-background": "#005a9e",
      "--accent-pressed-borderColor": "var(--accent-borderColor)",
      "--accent-pressed-contentColor": "#ffffff",
      "--accent-pressed-iconColor": "var(--accent-iconColor)",
      "--body-background": "white",
      "--body-contentColor": "black",
      "--button-background": "#ffffff",
      "--button-borderColor": "#8a8886",
      "--button-borderRadius": "2px",
      "--button-borderWidth": "1px",
      "--button-checked-background": "#edebe9",
      "--button-checked-contentColor": "#201f1e",
      "--button-checkedHovered-background": "#edebe9",
      "--button-checkedHovered-contentColor": "#000000",
      "--button-contentColor": "#323130",
      "--button-contentGap": "10px",
      "--button-disabled-background": "#f3f2f1",
      "--button-disabled-borderColor": "#f3f2f1",
      "--button-disabled-contentColor": "#a19f9d",
      "--button-disabled-dividerColor": "#c8c6c4",
      "--button-disabled-iconColor": "var(--button-disabled-contentColor)",
      "--button-dividerColor": "#c8c6c4",
      "--button-dividerLength": "var(--button-minHeight)",
      "--button-dividerThickness": "var(--button-borderWidth)",
      "--button-focusColor": "#605e5c",
      "--button-focusInnerColor": "#ffffff",
      "--button-focused-background": "var(--button-background)",
      "--button-focused-borderColor": "var(--button-borderColor)",
      "--button-focused-contentColor": "var(--button-contentColor)",
      "--button-focused-iconColor": "var(--button-iconColor)",
      "--button-fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "--button-fontSize": "14px",
      "--button-fontWeight": 600,
      "--button-hovered-background": "#f3f2f1",
      "--button-hovered-borderColor": "#8a8886",
      "--button-hovered-contentColor": "#201f1e",
      "--button-hovered-iconColor": "var(--button-iconColor)",
      "--button-iconColor": "inherit",
      "--button-iconSize": "16px",
      "--button-minHeight": "var(--button-size-regular)",
      "--button-padding": "0 16px",
      "--button-pressed-background": "#edebe9",
      "--button-pressed-borderColor": "#8a8886",
      "--button-pressed-contentColor": "#201f1e",
      "--button-pressed-iconColor": "var(--button-iconColor)",
      "--button-size-large": "40px",
      "--button-size-larger": "48px",
      "--button-size-largest": "64px",
      "--button-size-regular": "32px",
      "--button-size-small": "24px",
      "--button-size-smaller": "24px",
      "--button-size-smallest": "24px",
      "--effects-elevation16": "0 6.4px 14.4px 0 rgba(0, 0, 0, 0.132), 0 1.2px 3.6px 0 rgba(0, 0, 0, 0.108)",
      "--effects-elevation4": "0 1.6px 3.6px 0 rgba(0, 0, 0, 0.132), 0 0.3px 0.9px 0 rgba(0, 0, 0, 0.108)",
      "--effects-elevation64": "0 25.6px 57.6px 0 rgba(0, 0, 0, 0.22), 0 4.8px 14.4px 0 rgba(0, 0, 0, 0.18)",
      "--effects-elevation8": "0 3.2px 7.2px 0 rgba(0, 0, 0, 0.132), 0 0.6px 1.8px 0 rgba(0, 0, 0, 0.108)",
      "--effects-roundedCorner2": "2px",
      "--effects-roundedCorner4": "4px",
      "--effects-roundedCorner6": "6px",
      "--fonts-large-MozOsxFontSmoothing": "grayscale",
      "--fonts-large-WebkitFontSmoothing": "antialiased",
      "--fonts-large-fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "--fonts-large-fontSize": "18px",
      "--fonts-large-fontWeight": 400,
      "--fonts-medium-MozOsxFontSmoothing": "grayscale",
      "--fonts-medium-WebkitFontSmoothing": "antialiased",
      "--fonts-medium-fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "--fonts-medium-fontSize": "14px",
      "--fonts-medium-fontWeight": 400,
      "--fonts-mediumPlus-MozOsxFontSmoothing": "grayscale",
      "--fonts-mediumPlus-WebkitFontSmoothing": "antialiased",
      "--fonts-mediumPlus-fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "--fonts-mediumPlus-fontSize": "16px",
      "--fonts-mediumPlus-fontWeight": 400,
      "--fonts-mega-MozOsxFontSmoothing": "grayscale",
      "--fonts-mega-WebkitFontSmoothing": "antialiased",
      "--fonts-mega-fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "--fonts-mega-fontSize": "68px",
      "--fonts-mega-fontWeight": 600,
      "--fonts-small-MozOsxFontSmoothing": "grayscale",
      "--fonts-small-WebkitFontSmoothing": "antialiased",
      "--fonts-small-fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "--fonts-small-fontSize": "12px",
      "--fonts-small-fontWeight": 400,
      "--fonts-smallPlus-MozOsxFontSmoothing": "grayscale",
      "--fonts-smallPlus-WebkitFontSmoothing": "antialiased",
      "--fonts-smallPlus-fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "--fonts-smallPlus-fontSize": "12px",
      "--fonts-smallPlus-fontWeight": 400,
      "--fonts-superLarge-MozOsxFontSmoothing": "grayscale",
      "--fonts-superLarge-WebkitFontSmoothing": "antialiased",
      "--fonts-superLarge-fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "--fonts-superLarge-fontSize": "42px",
      "--fonts-superLarge-fontWeight": 600,
      "--fonts-tiny-MozOsxFontSmoothing": "grayscale",
      "--fonts-tiny-WebkitFontSmoothing": "antialiased",
      "--fonts-tiny-fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "--fonts-tiny-fontSize": "10px",
      "--fonts-tiny-fontWeight": 400,
      "--fonts-xLarge-MozOsxFontSmoothing": "grayscale",
      "--fonts-xLarge-WebkitFontSmoothing": "antialiased",
      "--fonts-xLarge-fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "--fonts-xLarge-fontSize": "20px",
      "--fonts-xLarge-fontWeight": 600,
      "--fonts-xLargePlus-MozOsxFontSmoothing": "grayscale",
      "--fonts-xLargePlus-WebkitFontSmoothing": "antialiased",
      "--fonts-xLargePlus-fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "--fonts-xLargePlus-fontSize": "24px",
      "--fonts-xLargePlus-fontWeight": 600,
      "--fonts-xSmall-MozOsxFontSmoothing": "grayscale",
      "--fonts-xSmall-WebkitFontSmoothing": "antialiased",
      "--fonts-xSmall-fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "--fonts-xSmall-fontSize": "10px",
      "--fonts-xSmall-fontWeight": 400,
      "--fonts-xxLarge-MozOsxFontSmoothing": "grayscale",
      "--fonts-xxLarge-WebkitFontSmoothing": "antialiased",
      "--fonts-xxLarge-fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "--fonts-xxLarge-fontSize": "28px",
      "--fonts-xxLarge-fontWeight": 600,
      "--fonts-xxLargePlus-MozOsxFontSmoothing": "grayscale",
      "--fonts-xxLargePlus-WebkitFontSmoothing": "antialiased",
      "--fonts-xxLargePlus-fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "--fonts-xxLargePlus-fontSize": "32px",
      "--fonts-xxLargePlus-fontWeight": 600,
      "--palette-accent": "#0078d4",
      "--palette-black": "#000000",
      "--palette-blackTranslucent40": "rgba(0,0,0,.4)",
      "--palette-blue": "#0078d4",
      "--palette-blueDark": "#002050",
      "--palette-blueLight": "#00bcf2",
      "--palette-blueMid": "#00188f",
      "--palette-green": "#107c10",
      "--palette-greenDark": "#004b1c",
      "--palette-greenLight": "#bad80a",
      "--palette-magenta": "#b4009e",
      "--palette-magentaDark": "#5c005c",
      "--palette-magentaLight": "#e3008c",
      "--palette-neutralDark": "#201f1e",
      "--palette-neutralLight": "#edebe9",
      "--palette-neutralLighter": "#f3f2f1",
      "--palette-neutralLighterAlt": "#faf9f8",
      "--palette-neutralPrimary": "#323130",
      "--palette-neutralPrimaryAlt": "#3b3a39",
      "--palette-neutralQuaternary": "#d2d0ce",
      "--palette-neutralQuaternaryAlt": "#e1dfdd",
      "--palette-neutralSecondary": "#605e5c",
      "--palette-neutralSecondaryAlt": "#8a8886",
      "--palette-neutralTertiary": "#a19f9d",
      "--palette-neutralTertiaryAlt": "#c8c6c4",
      "--palette-orange": "#d83b01",
      "--palette-orangeLight": "#ea4300",
      "--palette-orangeLighter": "#ff8c00",
      "--palette-purple": "#5c2d91",
      "--palette-purpleDark": "#32145a",
      "--palette-purpleLight": "#b4a0ff",
      "--palette-red": "#e81123",
      "--palette-redDark": "#a4262c",
      "--palette-teal": "#008272",
      "--palette-tealDark": "#004b50",
      "--palette-tealLight": "#00b294",
      "--palette-themeDark": "#005a9e",
      "--palette-themeDarkAlt": "#106ebe",
      "--palette-themeDarker": "#004578",
      "--palette-themeLight": "#c7e0f4",
      "--palette-themeLighter": "#deecf9",
      "--palette-themeLighterAlt": "#eff6fc",
      "--palette-themePrimary": "#0078d4",
      "--palette-themeSecondary": "#2b88d8",
      "--palette-themeTertiary": "#71afe5",
      "--palette-white": "#ffffff",
      "--palette-whiteTranslucent40": "rgba(255,255,255,.4)",
      "--palette-yellow": "#ffb900",
      "--palette-yellowDark": "#d29200",
      "--palette-yellowLight": "#fff100",
      "--semanticColors-accentButtonBackground": "#0078d4",
      "--semanticColors-accentButtonText": "#ffffff",
      "--semanticColors-actionLink": "#323130",
      "--semanticColors-actionLinkHovered": "#201f1e",
      "--semanticColors-blockingBackground": "#FDE7E9",
      "--semanticColors-blockingIcon": "#FDE7E9",
      "--semanticColors-bodyBackground": "#ffffff",
      "--semanticColors-bodyBackgroundChecked": "#edebe9",
      "--semanticColors-bodyBackgroundHovered": "#f3f2f1",
      "--semanticColors-bodyDivider": "#edebe9",
      "--semanticColors-bodyFrameBackground": "#ffffff",
      "--semanticColors-bodyFrameDivider": "#edebe9",
      "--semanticColors-bodyStandoutBackground": "#faf9f8",
      "--semanticColors-bodySubtext": "#605e5c",
      "--semanticColors-bodyText": "#323130",
      "--semanticColors-bodyTextChecked": "#000000",
      "--semanticColors-buttonBackground": "#ffffff",
      "--semanticColors-buttonBackgroundChecked": "#c8c6c4",
      "--semanticColors-buttonBackgroundCheckedHovered": "#edebe9",
      "--semanticColors-buttonBackgroundDisabled": "#f3f2f1",
      "--semanticColors-buttonBackgroundHovered": "#f3f2f1",
      "--semanticColors-buttonBackgroundPressed": "#edebe9",
      "--semanticColors-buttonBorder": "#8a8886",
      "--semanticColors-buttonBorderDisabled": "#f3f2f1",
      "--semanticColors-buttonText": "#323130",
      "--semanticColors-buttonTextChecked": "#201f1e",
      "--semanticColors-buttonTextCheckedHovered": "#000000",
      "--semanticColors-buttonTextDisabled": "#a19f9d",
      "--semanticColors-buttonTextHovered": "#201f1e",
      "--semanticColors-buttonTextPressed": "#201f1e",
      "--semanticColors-cardShadow": "0 1.6px 3.6px 0 rgba(0, 0, 0, 0.132), 0 0.3px 0.9px 0 rgba(0, 0, 0, 0.108)",
      "--semanticColors-cardShadowHovered": "0 3.2px 7.2px 0 rgba(0, 0, 0, 0.132), 0 0.6px 1.8px 0 rgba(0, 0, 0, 0.108)",
      "--semanticColors-cardStandoutBackground": "#ffffff",
      "--semanticColors-defaultStateBackground": "#faf9f8",
      "--semanticColors-disabledBackground": "#f3f2f1",
      "--semanticColors-disabledBodySubtext": "#c8c6c4",
      "--semanticColors-disabledBodyText": "#a19f9d",
      "--semanticColors-disabledBorder": "#c8c6c4",
      "--semanticColors-disabledSubtext": "#d2d0ce",
      "--semanticColors-disabledText": "#a19f9d",
      "--semanticColors-errorBackground": "#FDE7E9",
      "--semanticColors-errorIcon": "#A80000",
      "--semanticColors-errorText": "#a4262c",
      "--semanticColors-focusBorder": "#605e5c",
      "--semanticColors-infoBackground": "#f3f2f1",
      "--semanticColors-infoIcon": "#605e5c",
      "--semanticColors-inputBackground": "#ffffff",
      "--semanticColors-inputBackgroundChecked": "#0078d4",
      "--semanticColors-inputBackgroundCheckedHovered": "#005a9e",
      "--semanticColors-inputBorder": "#605e5c",
      "--semanticColors-inputBorderHovered": "#323130",
      "--semanticColors-inputFocusBorderAlt": "#0078d4",
      "--semanticColors-inputForegroundChecked": "#ffffff",
      "--semanticColors-inputIcon": "#0078d4",
      "--semanticColors-inputIconDisabled": "#a19f9d",
      "--semanticColors-inputIconHovered": "#005a9e",
      "--semanticColors-inputPlaceholderBackgroundChecked": "#deecf9",
      "--semanticColors-inputPlaceholderText": "#605e5c",
      "--semanticColors-inputText": "#323130",
      "--semanticColors-inputTextHovered": "#201f1e",
      "--semanticColors-link": "#0078d4",
      "--semanticColors-linkHovered": "#004578",
      "--semanticColors-listBackground": "#ffffff",
      "--semanticColors-listHeaderBackgroundHovered": "#f3f2f1",
      "--semanticColors-listHeaderBackgroundPressed": "#edebe9",
      "--semanticColors-listItemBackgroundChecked": "#edebe9",
      "--semanticColors-listItemBackgroundCheckedHovered": "#e1dfdd",
      "--semanticColors-listItemBackgroundHovered": "#f3f2f1",
      "--semanticColors-listText": "#323130",
      "--semanticColors-listTextColor": "#323130",
      "--semanticColors-menuBackground": "#ffffff",
      "--semanticColors-menuDivider": "#c8c6c4",
      "--semanticColors-menuHeader": "#0078d4",
      "--semanticColors-menuIcon": "#0078d4",
      "--semanticColors-menuItemBackgroundChecked": "#edebe9",
      "--semanticColors-menuItemBackgroundHovered": "#f3f2f1",
      "--semanticColors-menuItemBackgroundPressed": "#edebe9",
      "--semanticColors-menuItemText": "#323130",
      "--semanticColors-menuItemTextHovered": "#201f1e",
      "--semanticColors-messageLink": "#005A9E",
      "--semanticColors-messageLinkHovered": "#004578",
      "--semanticColors-messageText": "#323130",
      "--semanticColors-primaryButtonBackground": "#0078d4",
      "--semanticColors-primaryButtonBackgroundDisabled": "#f3f2f1",
      "--semanticColors-primaryButtonBackgroundHovered": "#106ebe",
      "--semanticColors-primaryButtonBackgroundPressed": "#005a9e",
      "--semanticColors-primaryButtonBorder": "transparent",
      "--semanticColors-primaryButtonText": "#ffffff",
      "--semanticColors-primaryButtonTextDisabled": "#d2d0ce",
      "--semanticColors-primaryButtonTextHovered": "#ffffff",
      "--semanticColors-primaryButtonTextPressed": "#ffffff",
      "--semanticColors-severeWarningBackground": "#FED9CC",
      "--semanticColors-severeWarningIcon": "#D83B01",
      "--semanticColors-smallInputBorder": "#605e5c",
      "--semanticColors-successBackground": "#DFF6DD",
      "--semanticColors-successIcon": "#107C10",
      "--semanticColors-successText": "#107C10",
      "--semanticColors-variantBorder": "#edebe9",
      "--semanticColors-variantBorderHovered": "#a19f9d",
      "--semanticColors-warningBackground": "#FFF4CE",
      "--semanticColors-warningHighlight": "#ffb900",
      "--semanticColors-warningIcon": "#797775",
      "--semanticColors-warningText": "#323130",
      "--spacing-l1": "20px",
      "--spacing-l2": "32px",
      "--spacing-m": "16px",
      "--spacing-s1": "8px",
      "--spacing-s2": "4px",
    }
  }
>
  Hello
</div>
`;

exports[`ThemeProvider renders nested themes 1`] = `
<div
  style={
    Object {
      "--accent-background": "#0078d4",
      "--accent-borderColor": "transparent",
      "--accent-checked-background": "#005a9e",
      "--accent-checked-contentColor": "#ffffff",
      "--accent-checkedHovered-background": "#005a9e",
      "--accent-checkedHovered-contentColor": "#ffffff",
      "--accent-contentColor": "#ffffff",
      "--accent-disabled-background": "#f3f2f1",
      "--accent-disabled-borderColor": "var(--accent-disabled-background)",
      "--accent-disabled-contentColor": "#a19f9d",
      "--accent-disabled-dividerColor": "#c8c6c4",
      "--accent-disabled-iconColor": "var(--accent-disabled-contentColor)",
      "--accent-dividerColor": "#ffffff",
      "--accent-focused-background": "var(--accent-background)",
      "--accent-focused-borderColor": "var(--accent-borderColor)",
      "--accent-focused-contentColor": "var(--accent-contentColor)",
      "--accent-focused-iconColor": "var(--accent-iconColor)",
      "--accent-hovered-background": "#106ebe",
      "--accent-hovered-borderColor": "var(--accent-borderColor)",
      "--accent-hovered-contentColor": "#ffffff",
      "--accent-hovered-iconColor": "#ffffff",
      "--accent-iconColor": "#ffffff",
      "--accent-pressed-background": "#005a9e",
      "--accent-pressed-borderColor": "var(--accent-borderColor)",
      "--accent-pressed-contentColor": "#ffffff",
      "--accent-pressed-iconColor": "var(--accent-iconColor)",
      "--body-background": "white",
      "--body-contentColor": "black",
      "--button-background": "#ffffff",
      "--button-borderColor": "#8a8886",
      "--button-borderRadius": "2px",
      "--button-borderWidth": "1px",
      "--button-checked-background": "#edebe9",
      "--button-checked-contentColor": "#201f1e",
      "--button-checkedHovered-background": "#edebe9",
      "--button-checkedHovered-contentColor": "#000000",
      "--button-contentColor": "#323130",
      "--button-contentGap": "10px",
      "--button-disabled-background": "#f3f2f1",
      "--button-disabled-borderColor": "#f3f2f1",
      "--button-disabled-contentColor": "#a19f9d",
      "--button-disabled-dividerColor": "#c8c6c4",
      "--button-disabled-iconColor": "var(--button-disabled-contentColor)",
      "--button-dividerColor": "#c8c6c4",
      "--button-dividerLength": "var(--button-minHeight)",
      "--button-dividerThickness": "var(--button-borderWidth)",
      "--button-focusColor": "#605e5c",
      "--button-focusInnerColor": "#ffffff",
      "--button-focused-background": "var(--button-background)",
      "--button-focused-borderColor": "var(--button-borderColor)",
      "--button-focused-contentColor": "var(--button-contentColor)",
      "--button-focused-iconColor": "var(--button-iconColor)",
      "--button-fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "--button-fontSize": "14px",
      "--button-fontWeight": 600,
      "--button-hovered-background": "#f3f2f1",
      "--button-hovered-borderColor": "#8a8886",
      "--button-hovered-contentColor": "#201f1e",
      "--button-hovered-iconColor": "var(--button-iconColor)",
      "--button-iconColor": "inherit",
      "--button-iconSize": "16px",
      "--button-minHeight": "var(--button-size-regular)",
      "--button-padding": "0 16px",
      "--button-pressed-background": "#edebe9",
      "--button-pressed-borderColor": "#8a8886",
      "--button-pressed-contentColor": "#201f1e",
      "--button-pressed-iconColor": "var(--button-iconColor)",
      "--button-size-large": "40px",
      "--button-size-larger": "48px",
      "--button-size-largest": "64px",
      "--button-size-regular": "32px",
      "--button-size-small": "24px",
      "--button-size-smaller": "24px",
      "--button-size-smallest": "24px",
      "--effects-elevation16": "0 6.4px 14.4px 0 rgba(0, 0, 0, 0.132), 0 1.2px 3.6px 0 rgba(0, 0, 0, 0.108)",
      "--effects-elevation4": "0 1.6px 3.6px 0 rgba(0, 0, 0, 0.132), 0 0.3px 0.9px 0 rgba(0, 0, 0, 0.108)",
      "--effects-elevation64": "0 25.6px 57.6px 0 rgba(0, 0, 0, 0.22), 0 4.8px 14.4px 0 rgba(0, 0, 0, 0.18)",
      "--effects-elevation8": "0 3.2px 7.2px 0 rgba(0, 0, 0, 0.132), 0 0.6px 1.8px 0 rgba(0, 0, 0, 0.108)",
      "--effects-roundedCorner2": "2px",
      "--effects-roundedCorner4": "4px",
      "--effects-roundedCorner6": "6px",
      "--fonts-large-MozOsxFontSmoothing": "grayscale",
      "--fonts-large-WebkitFontSmoothing": "antialiased",
      "--fonts-large-fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "--fonts-large-fontSize": "18px",
      "--fonts-large-fontWeight": 400,
      "--fonts-medium-MozOsxFontSmoothing": "grayscale",
      "--fonts-medium-WebkitFontSmoothing": "antialiased",
      "--fonts-medium-fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "--fonts-medium-fontSize": "14px",
      "--fonts-medium-fontWeight": 400,
      "--fonts-mediumPlus-MozOsxFontSmoothing": "grayscale",
      "--fonts-mediumPlus-WebkitFontSmoothing": "antialiased",
      "--fonts-mediumPlus-fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "--fonts-mediumPlus-fontSize": "16px",
      "--fonts-mediumPlus-fontWeight": 400,
      "--fonts-mega-MozOsxFontSmoothing": "grayscale",
      "--fonts-mega-WebkitFontSmoothing": "antialiased",
      "--fonts-mega-fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "--fonts-mega-fontSize": "68px",
      "--fonts-mega-fontWeight": 600,
      "--fonts-small-MozOsxFontSmoothing": "grayscale",
      "--fonts-small-WebkitFontSmoothing": "antialiased",
      "--fonts-small-fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "--fonts-small-fontSize": "12px",
      "--fonts-small-fontWeight": 400,
      "--fonts-smallPlus-MozOsxFontSmoothing": "grayscale",
      "--fonts-smallPlus-WebkitFontSmoothing": "antialiased",
      "--fonts-smallPlus-fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "--fonts-smallPlus-fontSize": "12px",
      "--fonts-smallPlus-fontWeight": 400,
      "--fonts-superLarge-MozOsxFontSmoothing": "grayscale",
      "--fonts-superLarge-WebkitFontSmoothing": "antialiased",
      "--fonts-superLarge-fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "--fonts-superLarge-fontSize": "42px",
      "--fonts-superLarge-fontWeight": 600,
      "--fonts-tiny-MozOsxFontSmoothing": "grayscale",
      "--fonts-tiny-WebkitFontSmoothing": "antialiased",
      "--fonts-tiny-fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "--fonts-tiny-fontSize": "10px",
      "--fonts-tiny-fontWeight": 400,
      "--fonts-xLarge-MozOsxFontSmoothing": "grayscale",
      "--fonts-xLarge-WebkitFontSmoothing": "antialiased",
      "--fonts-xLarge-fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "--fonts-xLarge-fontSize": "20px",
      "--fonts-xLarge-fontWeight": 600,
      "--fonts-xLargePlus-MozOsxFontSmoothing": "grayscale",
      "--fonts-xLargePlus-WebkitFontSmoothing": "antialiased",
      "--fonts-xLargePlus-fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "--fonts-xLargePlus-fontSize": "24px",
      "--fonts-xLargePlus-fontWeight": 600,
      "--fonts-xSmall-MozOsxFontSmoothing": "grayscale",
      "--fonts-xSmall-WebkitFontSmoothing": "antialiased",
      "--fonts-xSmall-fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "--fonts-xSmall-fontSize": "10px",
      "--fonts-xSmall-fontWeight": 400,
      "--fonts-xxLarge-MozOsxFontSmoothing": "grayscale",
      "--fonts-xxLarge-WebkitFontSmoothing": "antialiased",
      "--fonts-xxLarge-fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "--fonts-xxLarge-fontSize": "28px",
      "--fonts-xxLarge-fontWeight": 600,
      "--fonts-xxLargePlus-MozOsxFontSmoothing": "grayscale",
      "--fonts-xxLargePlus-WebkitFontSmoothing": "antialiased",
      "--fonts-xxLargePlus-fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "--fonts-xxLargePlus-fontSize": "32px",
      "--fonts-xxLargePlus-fontWeight": 600,
      "--palette-accent": "#0078d4",
      "--palette-black": "#000000",
      "--palette-blackTranslucent40": "rgba(0,0,0,.4)",
      "--palette-blue": "#0078d4",
      "--palette-blueDark": "#002050",
      "--palette-blueLight": "#00bcf2",
      "--palette-blueMid": "#00188f",
      "--palette-green": "#107c10",
      "--palette-greenDark": "#004b1c",
      "--palette-greenLight": "#bad80a",
      "--palette-magenta": "#b4009e",
      "--palette-magentaDark": "#5c005c",
      "--palette-magentaLight": "#e3008c",
      "--palette-neutralDark": "#201f1e",
      "--palette-neutralLight": "#edebe9",
      "--palette-neutralLighter": "#f3f2f1",
      "--palette-neutralLighterAlt": "#faf9f8",
      "--palette-neutralPrimary": "#323130",
      "--palette-neutralPrimaryAlt": "#3b3a39",
      "--palette-neutralQuaternary": "#d2d0ce",
      "--palette-neutralQuaternaryAlt": "#e1dfdd",
      "--palette-neutralSecondary": "#605e5c",
      "--palette-neutralSecondaryAlt": "#8a8886",
      "--palette-neutralTertiary": "#a19f9d",
      "--palette-neutralTertiaryAlt": "#c8c6c4",
      "--palette-orange": "#d83b01",
      "--palette-orangeLight": "#ea4300",
      "--palette-orangeLighter": "#ff8c00",
      "--palette-purple": "#5c2d91",
      "--palette-purpleDark": "#32145a",
      "--palette-purpleLight": "#b4a0ff",
      "--palette-red": "#e81123",
      "--palette-redDark": "#a4262c",
      "--palette-teal": "#008272",
      "--palette-tealDark": "#004b50",
      "--palette-tealLight": "#00b294",
      "--palette-themeDark": "#005a9e",
      "--palette-themeDarkAlt": "#106ebe",
      "--palette-themeDarker": "#004578",
      "--palette-themeLight": "#c7e0f4",
      "--palette-themeLighter": "#deecf9",
      "--palette-themeLighterAlt": "#eff6fc",
      "--palette-themePrimary": "#0078d4",
      "--palette-themeSecondary": "#2b88d8",
      "--palette-themeTertiary": "#71afe5",
      "--palette-white": "#ffffff",
      "--palette-whiteTranslucent40": "rgba(255,255,255,.4)",
      "--palette-yellow": "#ffb900",
      "--palette-yellowDark": "#d29200",
      "--palette-yellowLight": "#fff100",
      "--semanticColors-accentButtonBackground": "#0078d4",
      "--semanticColors-accentButtonText": "#ffffff",
      "--semanticColors-actionLink": "#323130",
      "--semanticColors-actionLinkHovered": "#201f1e",
      "--semanticColors-blockingBackground": "#FDE7E9",
      "--semanticColors-blockingIcon": "#FDE7E9",
      "--semanticColors-bodyBackground": "#ffffff",
      "--semanticColors-bodyBackgroundChecked": "#edebe9",
      "--semanticColors-bodyBackgroundHovered": "#f3f2f1",
      "--semanticColors-bodyDivider": "#edebe9",
      "--semanticColors-bodyFrameBackground": "#ffffff",
      "--semanticColors-bodyFrameDivider": "#edebe9",
      "--semanticColors-bodyStandoutBackground": "#faf9f8",
      "--semanticColors-bodySubtext": "#605e5c",
      "--semanticColors-bodyText": "#323130",
      "--semanticColors-bodyTextChecked": "#000000",
      "--semanticColors-buttonBackground": "#ffffff",
      "--semanticColors-buttonBackgroundChecked": "#c8c6c4",
      "--semanticColors-buttonBackgroundCheckedHovered": "#edebe9",
      "--semanticColors-buttonBackgroundDisabled": "#f3f2f1",
      "--semanticColors-buttonBackgroundHovered": "#f3f2f1",
      "--semanticColors-buttonBackgroundPressed": "#edebe9",
      "--semanticColors-buttonBorder": "#8a8886",
      "--semanticColors-buttonBorderDisabled": "#f3f2f1",
      "--semanticColors-buttonText": "#323130",
      "--semanticColors-buttonTextChecked": "#201f1e",
      "--semanticColors-buttonTextCheckedHovered": "#000000",
      "--semanticColors-buttonTextDisabled": "#a19f9d",
      "--semanticColors-buttonTextHovered": "#201f1e",
      "--semanticColors-buttonTextPressed": "#201f1e",
      "--semanticColors-cardShadow": "0 1.6px 3.6px 0 rgba(0, 0, 0, 0.132), 0 0.3px 0.9px 0 rgba(0, 0, 0, 0.108)",
      "--semanticColors-cardShadowHovered": "0 3.2px 7.2px 0 rgba(0, 0, 0, 0.132), 0 0.6px 1.8px 0 rgba(0, 0, 0, 0.108)",
      "--semanticColors-cardStandoutBackground": "#ffffff",
      "--semanticColors-defaultStateBackground": "#faf9f8",
      "--semanticColors-disabledBackground": "#f3f2f1",
      "--semanticColors-disabledBodySubtext": "#c8c6c4",
      "--semanticColors-disabledBodyText": "#a19f9d",
      "--semanticColors-disabledBorder": "#c8c6c4",
      "--semanticColors-disabledSubtext": "#d2d0ce",
      "--semanticColors-disabledText": "#a19f9d",
      "--semanticColors-errorBackground": "#FDE7E9",
      "--semanticColors-errorIcon": "#A80000",
      "--semanticColors-errorText": "#a4262c",
      "--semanticColors-focusBorder": "#605e5c",
      "--semanticColors-infoBackground": "#f3f2f1",
      "--semanticColors-infoIcon": "#605e5c",
      "--semanticColors-inputBackground": "#ffffff",
      "--semanticColors-inputBackgroundChecked": "#0078d4",
      "--semanticColors-inputBackgroundCheckedHovered": "#005a9e",
      "--semanticColors-inputBorder": "#605e5c",
      "--semanticColors-inputBorderHovered": "#323130",
      "--semanticColors-inputFocusBorderAlt": "#0078d4",
      "--semanticColors-inputForegroundChecked": "#ffffff",
      "--semanticColors-inputIcon": "#0078d4",
      "--semanticColors-inputIconDisabled": "#a19f9d",
      "--semanticColors-inputIconHovered": "#005a9e",
      "--semanticColors-inputPlaceholderBackgroundChecked": "#deecf9",
      "--semanticColors-inputPlaceholderText": "#605e5c",
      "--semanticColors-inputText": "#323130",
      "--semanticColors-inputTextHovered": "#201f1e",
      "--semanticColors-link": "#0078d4",
      "--semanticColors-linkHovered": "#004578",
      "--semanticColors-listBackground": "#ffffff",
      "--semanticColors-listHeaderBackgroundHovered": "#f3f2f1",
      "--semanticColors-listHeaderBackgroundPressed": "#edebe9",
      "--semanticColors-listItemBackgroundChecked": "#edebe9",
      "--semanticColors-listItemBackgroundCheckedHovered": "#e1dfdd",
      "--semanticColors-listItemBackgroundHovered": "#f3f2f1",
      "--semanticColors-listText": "#323130",
      "--semanticColors-listTextColor": "#323130",
      "--semanticColors-menuBackground": "#ffffff",
      "--semanticColors-menuDivider": "#c8c6c4",
      "--semanticColors-menuHeader": "#0078d4",
      "--semanticColors-menuIcon": "#0078d4",
      "--semanticColors-menuItemBackgroundChecked": "#edebe9",
      "--semanticColors-menuItemBackgroundHovered": "#f3f2f1",
      "--semanticColors-menuItemBackgroundPressed": "#edebe9",
      "--semanticColors-menuItemText": "#323130",
      "--semanticColors-menuItemTextHovered": "#201f1e",
      "--semanticColors-messageLink": "#005A9E",
      "--semanticColors-messageLinkHovered": "#004578",
      "--semanticColors-messageText": "#323130",
      "--semanticColors-primaryButtonBackground": "#0078d4",
      "--semanticColors-primaryButtonBackgroundDisabled": "#f3f2f1",
      "--semanticColors-primaryButtonBackgroundHovered": "#106ebe",
      "--semanticColors-primaryButtonBackgroundPressed": "#005a9e",
      "--semanticColors-primaryButtonBorder": "transparent",
      "--semanticColors-primaryButtonText": "#ffffff",
      "--semanticColors-primaryButtonTextDisabled": "#d2d0ce",
      "--semanticColors-primaryButtonTextHovered": "#ffffff",
      "--semanticColors-primaryButtonTextPressed": "#ffffff",
      "--semanticColors-severeWarningBackground": "#FED9CC",
      "--semanticColors-severeWarningIcon": "#D83B01",
      "--semanticColors-smallInputBorder": "#605e5c",
      "--semanticColors-successBackground": "#DFF6DD",
      "--semanticColors-successIcon": "#107C10",
      "--semanticColors-successText": "#107C10",
      "--semanticColors-variantBorder": "#edebe9",
      "--semanticColors-variantBorderHovered": "#a19f9d",
      "--semanticColors-warningBackground": "#FFF4CE",
      "--semanticColors-warningHighlight": "#ffb900",
      "--semanticColors-warningIcon": "#797775",
      "--semanticColors-warningText": "#323130",
      "--spacing-l1": "20px",
      "--spacing-l2": "32px",
      "--spacing-m": "16px",
      "--spacing-s1": "8px",
      "--spacing-s2": "4px",
    }
  }
>
  <div>
    Light theme
  </div>
  <div
    style={
      Object {
        "--accent-background": "#0078d4",
        "--accent-borderColor": "transparent",
        "--accent-checked-background": "#005a9e",
        "--accent-checked-contentColor": "#ffffff",
        "--accent-checkedHovered-background": "#005a9e",
        "--accent-checkedHovered-contentColor": "#ffffff",
        "--accent-contentColor": "#ffffff",
        "--accent-disabled-background": "#f3f2f1",
        "--accent-disabled-borderColor": "var(--accent-disabled-background)",
        "--accent-disabled-contentColor": "#a19f9d",
        "--accent-disabled-dividerColor": "#c8c6c4",
        "--accent-disabled-iconColor": "var(--accent-disabled-contentColor)",
        "--accent-dividerColor": "#ffffff",
        "--accent-focused-background": "var(--accent-background)",
        "--accent-focused-borderColor": "var(--accent-borderColor)",
        "--accent-focused-contentColor": "var(--accent-contentColor)",
        "--accent-focused-iconColor": "var(--accent-iconColor)",
        "--accent-hovered-background": "#106ebe",
        "--accent-hovered-borderColor": "var(--accent-borderColor)",
        "--accent-hovered-contentColor": "#ffffff",
        "--accent-hovered-iconColor": "#ffffff",
        "--accent-iconColor": "#ffffff",
        "--accent-pressed-background": "#005a9e",
        "--accent-pressed-borderColor": "var(--accent-borderColor)",
        "--accent-pressed-contentColor": "#ffffff",
        "--accent-pressed-iconColor": "var(--accent-iconColor)",
        "--body-background": "black",
        "--body-contentColor": "white",
        "--button-background": "#ffffff",
        "--button-borderColor": "#8a8886",
        "--button-borderRadius": "2px",
        "--button-borderWidth": "1px",
        "--button-checked-background": "#edebe9",
        "--button-checked-contentColor": "#201f1e",
        "--button-checkedHovered-background": "#edebe9",
        "--button-checkedHovered-contentColor": "#000000",
        "--button-contentColor": "#323130",
        "--button-contentGap": "10px",
        "--button-disabled-background": "#f3f2f1",
        "--button-disabled-borderColor": "#f3f2f1",
        "--button-disabled-contentColor": "#a19f9d",
        "--button-disabled-dividerColor": "#c8c6c4",
        "--button-disabled-iconColor": "var(--button-disabled-contentColor)",
        "--button-dividerColor": "#c8c6c4",
        "--button-dividerLength": "var(--button-minHeight)",
        "--button-dividerThickness": "var(--button-borderWidth)",
        "--button-focusColor": "#605e5c",
        "--button-focusInnerColor": "#ffffff",
        "--button-focused-background": "var(--button-background)",
        "--button-focused-borderColor": "var(--button-borderColor)",
        "--button-focused-contentColor": "var(--button-contentColor)",
        "--button-focused-iconColor": "var(--button-iconColor)",
        "--button-fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
        "--button-fontSize": "14px",
        "--button-fontWeight": 600,
        "--button-hovered-background": "#f3f2f1",
        "--button-hovered-borderColor": "#8a8886",
        "--button-hovered-contentColor": "#201f1e",
        "--button-hovered-iconColor": "var(--button-iconColor)",
        "--button-iconColor": "inherit",
        "--button-iconSize": "16px",
        "--button-minHeight": "var(--button-size-regular)",
        "--button-padding": "0 16px",
        "--button-pressed-background": "#edebe9",
        "--button-pressed-borderColor": "#8a8886",
        "--button-pressed-contentColor": "#201f1e",
        "--button-pressed-iconColor": "var(--button-iconColor)",
        "--button-size-large": "40px",
        "--button-size-larger": "48px",
        "--button-size-largest": "64px",
        "--button-size-regular": "32px",
        "--button-size-small": "24px",
        "--button-size-smaller": "24px",
        "--button-size-smallest": "24px",
        "--effects-elevation16": "0 6.4px 14.4px 0 rgba(0, 0, 0, 0.132), 0 1.2px 3.6px 0 rgba(0, 0, 0, 0.108)",
        "--effects-elevation4": "0 1.6px 3.6px 0 rgba(0, 0, 0, 0.132), 0 0.3px 0.9px 0 rgba(0, 0, 0, 0.108)",
        "--effects-elevation64": "0 25.6px 57.6px 0 rgba(0, 0, 0, 0.22), 0 4.8px 14.4px 0 rgba(0, 0, 0, 0.18)",
        "--effects-elevation8": "0 3.2px 7.2px 0 rgba(0, 0, 0, 0.132), 0 0.6px 1.8px 0 rgba(0, 0, 0, 0.108)",
        "--effects-roundedCorner2": "2px",
        "--effects-roundedCorner4": "4px",
        "--effects-roundedCorner6": "6px",
        "--fonts-large-MozOsxFontSmoothing": "grayscale",
        "--fonts-large-WebkitFontSmoothing": "antialiased",
        "--fonts-large-fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
        "--fonts-large-fontSize": "18px",
        "--fonts-large-fontWeight": 400,
        "--fonts-medium-MozOsxFontSmoothing": "grayscale",
        "--fonts-medium-WebkitFontSmoothing": "antialiased",
        "--fonts-medium-fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
        "--fonts-medium-fontSize": "14px",
        "--fonts-medium-fontWeight": 400,
        "--fonts-mediumPlus-MozOsxFontSmoothing": "grayscale",
        "--fonts-mediumPlus-WebkitFontSmoothing": "antialiased",
        "--fonts-mediumPlus-fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
        "--fonts-mediumPlus-fontSize": "16px",
        "--fonts-mediumPlus-fontWeight": 400,
        "--fonts-mega-MozOsxFontSmoothing": "grayscale",
        "--fonts-mega-WebkitFontSmoothing": "antialiased",
        "--fonts-mega-fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
        "--fonts-mega-fontSize": "68px",
        "--fonts-mega-fontWeight": 600,
        "--fonts-small-MozOsxFontSmoothing": "grayscale",
        "--fonts-small-WebkitFontSmoothing": "antialiased",
        "--fonts-small-fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
        "--fonts-small-fontSize": "12px",
        "--fonts-small-fontWeight": 400,
        "--fonts-smallPlus-MozOsxFontSmoothing": "grayscale",
        "--fonts-smallPlus-WebkitFontSmoothing": "antialiased",
        "--fonts-smallPlus-fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
        "--fonts-smallPlus-fontSize": "12px",
        "--fonts-smallPlus-fontWeight": 400,
        "--fonts-superLarge-MozOsxFontSmoothing": "grayscale",
        "--fonts-superLarge-WebkitFontSmoothing": "antialiased",
        "--fonts-superLarge-fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
        "--fonts-superLarge-fontSize": "42px",
        "--fonts-superLarge-fontWeight": 600,
        "--fonts-tiny-MozOsxFontSmoothing": "grayscale",
        "--fonts-tiny-WebkitFontSmoothing": "antialiased",
        "--fonts-tiny-fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
        "--fonts-tiny-fontSize": "10px",
        "--fonts-tiny-fontWeight": 400,
        "--fonts-xLarge-MozOsxFontSmoothing": "grayscale",
        "--fonts-xLarge-WebkitFontSmoothing": "antialiased",
        "--fonts-xLarge-fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
        "--fonts-xLarge-fontSize": "20px",
        "--fonts-xLarge-fontWeight": 600,
        "--fonts-xLargePlus-MozOsxFontSmoothing": "grayscale",
        "--fonts-xLargePlus-WebkitFontSmoothing": "antialiased",
        "--fonts-xLargePlus-fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
        "--fonts-xLargePlus-fontSize": "24px",
        "--fonts-xLargePlus-fontWeight": 600,
        "--fonts-xSmall-MozOsxFontSmoothing": "grayscale",
        "--fonts-xSmall-WebkitFontSmoothing": "antialiased",
        "--fonts-xSmall-fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
        "--fonts-xSmall-fontSize": "10px",
        "--fonts-xSmall-fontWeight": 400,
        "--fonts-xxLarge-MozOsxFontSmoothing": "grayscale",
        "--fonts-xxLarge-WebkitFontSmoothing": "antialiased",
        "--fonts-xxLarge-fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
        "--fonts-xxLarge-fontSize": "28px",
        "--fonts-xxLarge-fontWeight": 600,
        "--fonts-xxLargePlus-MozOsxFontSmoothing": "grayscale",
        "--fonts-xxLargePlus-WebkitFontSmoothing": "antialiased",
        "--fonts-xxLargePlus-fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
        "--fonts-xxLargePlus-fontSize": "32px",
        "--fonts-xxLargePlus-fontWeight": 600,
        "--palette-accent": "#0078d4",
        "--palette-black": "#000000",
        "--palette-blackTranslucent40": "rgba(0,0,0,.4)",
        "--palette-blue": "#0078d4",
        "--palette-blueDark": "#002050",
        "--palette-blueLight": "#00bcf2",
        "--palette-blueMid": "#00188f",
        "--palette-green": "#107c10",
        "--palette-greenDark": "#004b1c",
        "--palette-greenLight": "#bad80a",
        "--palette-magenta": "#b4009e",
        "--palette-magentaDark": "#5c005c",
        "--palette-magentaLight": "#e3008c",
        "--palette-neutralDark": "#201f1e",
        "--palette-neutralLight": "#edebe9",
        "--palette-neutralLighter": "#f3f2f1",
        "--palette-neutralLighterAlt": "#faf9f8",
        "--palette-neutralPrimary": "#323130",
        "--palette-neutralPrimaryAlt": "#3b3a39",
        "--palette-neutralQuaternary": "#d2d0ce",
        "--palette-neutralQuaternaryAlt": "#e1dfdd",
        "--palette-neutralSecondary": "#605e5c",
        "--palette-neutralSecondaryAlt": "#8a8886",
        "--palette-neutralTertiary": "#a19f9d",
        "--palette-neutralTertiaryAlt": "#c8c6c4",
        "--palette-orange": "#d83b01",
        "--palette-orangeLight": "#ea4300",
        "--palette-orangeLighter": "#ff8c00",
        "--palette-purple": "#5c2d91",
        "--palette-purpleDark": "#32145a",
        "--palette-purpleLight": "#b4a0ff",
        "--palette-red": "#e81123",
        "--palette-redDark": "#a4262c",
        "--palette-teal": "#008272",
        "--palette-tealDark": "#004b50",
        "--palette-tealLight": "#00b294",
        "--palette-themeDark": "#005a9e",
        "--palette-themeDarkAlt": "#106ebe",
        "--palette-themeDarker": "#004578",
        "--palette-themeLight": "#c7e0f4",
        "--palette-themeLighter": "#deecf9",
        "--palette-themeLighterAlt": "#eff6fc",
        "--palette-themePrimary": "#0078d4",
        "--palette-themeSecondary": "#2b88d8",
        "--palette-themeTertiary": "#71afe5",
        "--palette-white": "#ffffff",
        "--palette-whiteTranslucent40": "rgba(255,255,255,.4)",
        "--palette-yellow": "#ffb900",
        "--palette-yellowDark": "#d29200",
        "--palette-yellowLight": "#fff100",
        "--semanticColors-accentButtonBackground": "#0078d4",
        "--semanticColors-accentButtonText": "#ffffff",
        "--semanticColors-actionLink": "#323130",
        "--semanticColors-actionLinkHovered": "#201f1e",
        "--semanticColors-blockingBackground": "#FDE7E9",
        "--semanticColors-blockingIcon": "#FDE7E9",
        "--semanticColors-bodyBackground": "#ffffff",
        "--semanticColors-bodyBackgroundChecked": "#edebe9",
        "--semanticColors-bodyBackgroundHovered": "#f3f2f1",
        "--semanticColors-bodyDivider": "#edebe9",
        "--semanticColors-bodyFrameBackground": "#ffffff",
        "--semanticColors-bodyFrameDivider": "#edebe9",
        "--semanticColors-bodyStandoutBackground": "#faf9f8",
        "--semanticColors-bodySubtext": "#605e5c",
        "--semanticColors-bodyText": "#323130",
        "--semanticColors-bodyTextChecked": "#000000",
        "--semanticColors-buttonBackground": "#ffffff",
        "--semanticColors-buttonBackgroundChecked": "#c8c6c4",
        "--semanticColors-buttonBackgroundCheckedHovered": "#edebe9",
        "--semanticColors-buttonBackgroundDisabled": "#f3f2f1",
        "--semanticColors-buttonBackgroundHovered": "#f3f2f1",
        "--semanticColors-buttonBackgroundPressed": "#edebe9",
        "--semanticColors-buttonBorder": "#8a8886",
        "--semanticColors-buttonBorderDisabled": "#f3f2f1",
        "--semanticColors-buttonText": "#323130",
        "--semanticColors-buttonTextChecked": "#201f1e",
        "--semanticColors-buttonTextCheckedHovered": "#000000",
        "--semanticColors-buttonTextDisabled": "#a19f9d",
        "--semanticColors-buttonTextHovered": "#201f1e",
        "--semanticColors-buttonTextPressed": "#201f1e",
        "--semanticColors-cardShadow": "0 1.6px 3.6px 0 rgba(0, 0, 0, 0.132), 0 0.3px 0.9px 0 rgba(0, 0, 0, 0.108)",
        "--semanticColors-cardShadowHovered": "0 3.2px 7.2px 0 rgba(0, 0, 0, 0.132), 0 0.6px 1.8px 0 rgba(0, 0, 0, 0.108)",
        "--semanticColors-cardStandoutBackground": "#ffffff",
        "--semanticColors-defaultStateBackground": "#faf9f8",
        "--semanticColors-disabledBackground": "#f3f2f1",
        "--semanticColors-disabledBodySubtext": "#c8c6c4",
        "--semanticColors-disabledBodyText": "#a19f9d",
        "--semanticColors-disabledBorder": "#c8c6c4",
        "--semanticColors-disabledSubtext": "#d2d0ce",
        "--semanticColors-disabledText": "#a19f9d",
        "--semanticColors-errorBackground": "#FDE7E9",
        "--semanticColors-errorIcon": "#A80000",
        "--semanticColors-errorText": "#a4262c",
        "--semanticColors-focusBorder": "#605e5c",
        "--semanticColors-infoBackground": "#f3f2f1",
        "--semanticColors-infoIcon": "#605e5c",
        "--semanticColors-inputBackground": "#ffffff",
        "--semanticColors-inputBackgroundChecked": "#0078d4",
        "--semanticColors-inputBackgroundCheckedHovered": "#005a9e",
        "--semanticColors-inputBorder": "#605e5c",
        "--semanticColors-inputBorderHovered": "#323130",
        "--semanticColors-inputFocusBorderAlt": "#0078d4",
        "--semanticColors-inputForegroundChecked": "#ffffff",
        "--semanticColors-inputIcon": "#0078d4",
        "--semanticColors-inputIconDisabled": "#a19f9d",
        "--semanticColors-inputIconHovered": "#005a9e",
        "--semanticColors-inputPlaceholderBackgroundChecked": "#deecf9",
        "--semanticColors-inputPlaceholderText": "#605e5c",
        "--semanticColors-inputText": "#323130",
        "--semanticColors-inputTextHovered": "#201f1e",
        "--semanticColors-link": "#0078d4",
        "--semanticColors-linkHovered": "#004578",
        "--semanticColors-listBackground": "#ffffff",
        "--semanticColors-listHeaderBackgroundHovered": "#f3f2f1",
        "--semanticColors-listHeaderBackgroundPressed": "#edebe9",
        "--semanticColors-listItemBackgroundChecked": "#edebe9",
        "--semanticColors-listItemBackgroundCheckedHovered": "#e1dfdd",
        "--semanticColors-listItemBackgroundHovered": "#f3f2f1",
        "--semanticColors-listText": "#323130",
        "--semanticColors-listTextColor": "#323130",
        "--semanticColors-menuBackground": "#ffffff",
        "--semanticColors-menuDivider": "#c8c6c4",
        "--semanticColors-menuHeader": "#0078d4",
        "--semanticColors-menuIcon": "#0078d4",
        "--semanticColors-menuItemBackgroundChecked": "#edebe9",
        "--semanticColors-menuItemBackgroundHovered": "#f3f2f1",
        "--semanticColors-menuItemBackgroundPressed": "#edebe9",
        "--semanticColors-menuItemText": "#323130",
        "--semanticColors-menuItemTextHovered": "#201f1e",
        "--semanticColors-messageLink": "#005A9E",
        "--semanticColors-messageLinkHovered": "#004578",
        "--semanticColors-messageText": "#323130",
        "--semanticColors-primaryButtonBackground": "#0078d4",
        "--semanticColors-primaryButtonBackgroundDisabled": "#f3f2f1",
        "--semanticColors-primaryButtonBackgroundHovered": "#106ebe",
        "--semanticColors-primaryButtonBackgroundPressed": "#005a9e",
        "--semanticColors-primaryButtonBorder": "transparent",
        "--semanticColors-primaryButtonText": "#ffffff",
        "--semanticColors-primaryButtonTextDisabled": "#d2d0ce",
        "--semanticColors-primaryButtonTextHovered": "#ffffff",
        "--semanticColors-primaryButtonTextPressed": "#ffffff",
        "--semanticColors-severeWarningBackground": "#FED9CC",
        "--semanticColors-severeWarningIcon": "#D83B01",
        "--semanticColors-smallInputBorder": "#605e5c",
        "--semanticColors-successBackground": "#DFF6DD",
        "--semanticColors-successIcon": "#107C10",
        "--semanticColors-successText": "#107C10",
        "--semanticColors-variantBorder": "#edebe9",
        "--semanticColors-variantBorderHovered": "#a19f9d",
        "--semanticColors-warningBackground": "#FFF4CE",
        "--semanticColors-warningHighlight": "#ffb900",
        "--semanticColors-warningIcon": "#797775",
        "--semanticColors-warningText": "#323130",
        "--spacing-l1": "20px",
        "--spacing-l2": "32px",
        "--spacing-m": "16px",
        "--spacing-s1": "8px",
        "--spacing-s2": "4px",
      }
    }
  >
    <div>
      Dark theme
    </div>
  </div>
</div>
`;
